@@ -10,6 +10,11 @@ IN DEVELOPMENT
   
   BUG FIXES:
 
+    * _KnitIndex.add_versions() dictionary compresses revision ids as they
+      are added. This fixes bug where fetching remote revisions records
+      them as full references rather than integers. (John Arbash Meinel,
+      #64789)
+
     * mv correctly handles paths that traverse symlinks. 
       (Aaron Bentley, #66964)
 
